// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildPluginLoaderProgram emits plugin loader with controller registrations: plugin-loader-program 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment_Doc",
          "text": "/**
 * Plugin Name: Demo Plugin
 * Description: Bootstrap loader for the Demo Plugin WPKernel integration.
 * Version: 0.1.0
 * Requires at least: 6.7
 * Requires PHP: 8.1
 * Text Domain: demo-plugin
 * Author: WPKernel Contributors
 * Author URI: https://github.com/wpkernel/wpkernel
 * License: GPL-2.0-or-later
 * License URI: https://www.gnu.org/licenses/gpl-2.0.html
 * Generated by WPKernel CLI - edits between WPK:BEGIN AUTO and WPK:END AUTO are managed by the generator.
 * Source: wpk.config.ts → plugin/loader
 * @package DemoPlugin
 */",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "declares": [
      {
        "attributes": {},
        "key": {
          "attributes": {},
          "name": "strict_types",
          "nodeType": "Identifier",
        },
        "nodeType": "DeclareItem",
        "value": {
          "attributes": {},
          "nodeType": "Scalar_Int",
          "value": 1,
        },
      },
    ],
    "nodeType": "Stmt_Declare",
    "stmts": null,
  },
  {
    "attributes": {},
    "name": {
      "attributes": {},
      "nodeType": "Name",
      "parts": [
        "Demo",
        "Plugin",
      ],
    },
    "nodeType": "Stmt_Namespace",
    "stmts": [
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/**
 * AUTO-GENERATED by WPKernel CLI.
 * Edits between WPK:BEGIN AUTO and WPK:END AUTO will be overwritten.
 * Source: wpk.config.ts → plugin/loader
 */",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:BEGIN AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attributes": {},
        "cond": {
          "attributes": {},
          "expr": {
            "args": [
              {
                "attributes": {},
                "byRef": false,
                "name": null,
                "nodeType": "Arg",
                "unpack": false,
                "value": {
                  "attributes": {},
                  "nodeType": "Scalar_String",
                  "value": "ABSPATH",
                },
              },
            ],
            "attributes": {},
            "name": {
              "attributes": {},
              "nodeType": "Name",
              "parts": [
                "defined",
              ],
            },
            "nodeType": "Expr_FuncCall",
          },
          "nodeType": "Expr_BooleanNot",
        },
        "else": null,
        "elseifs": [],
        "nodeType": "Stmt_If",
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "args": [],
              "attributes": {},
              "name": {
                "attributes": {},
                "nodeType": "Name",
                "parts": [
                  "exit",
                ],
              },
              "nodeType": "Expr_FuncCall",
            },
            "nodeType": "Stmt_Expression",
          },
        ],
      },
      {
        "attrGroups": [],
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/**
 * Retrieve WPKernel REST controllers generated for this plugin.
 * @return array<int, object>
 */",
            },
          ],
        },
        "byRef": false,
        "name": {
          "attributes": {},
          "name": "get_wpkernel_controllers",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Function",
        "params": [],
        "returnType": {
          "attributes": {},
          "name": "array",
          "nodeType": "Identifier",
        },
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "attributes": {},
              "items": [
                {
                  "attributes": {},
                  "byRef": false,
                  "key": null,
                  "nodeType": "ArrayItem",
                  "unpack": false,
                  "value": {
                    "args": [],
                    "attributes": {},
                    "class": {
                      "attributes": {},
                      "nodeType": "Name_FullyQualified",
                      "parts": [
                        "Demo",
                        "Plugin",
                        "Generated",
                        "Rest",
                        "BooksController",
                      ],
                    },
                    "nodeType": "Expr_New",
                  },
                },
                {
                  "attributes": {},
                  "byRef": false,
                  "key": null,
                  "nodeType": "ArrayItem",
                  "unpack": false,
                  "value": {
                    "args": [],
                    "attributes": {},
                    "class": {
                      "attributes": {},
                      "nodeType": "Name_FullyQualified",
                      "parts": [
                        "Demo",
                        "Plugin",
                        "Generated",
                        "Rest",
                        "AuthorsController",
                      ],
                    },
                    "nodeType": "Expr_New",
                  },
                },
              ],
              "nodeType": "Expr_Array",
            },
            "nodeType": "Stmt_Return",
          },
        ],
      },
      {
        "attrGroups": [],
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/** Register WPKernel REST controllers with WordPress. */",
            },
          ],
        },
        "byRef": false,
        "name": {
          "attributes": {},
          "name": "register_wpkernel_routes",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Function",
        "params": [],
        "returnType": {
          "attributes": {},
          "name": "void",
          "nodeType": "Identifier",
        },
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "attributes": {},
              "expr": {
                "args": [],
                "attributes": {},
                "name": {
                  "attributes": {},
                  "nodeType": "Name",
                  "parts": [
                    "get_wpkernel_controllers",
                  ],
                },
                "nodeType": "Expr_FuncCall",
              },
              "nodeType": "Expr_Assign",
              "var": {
                "attributes": {},
                "name": "controllers",
                "nodeType": "Expr_Variable",
              },
            },
            "nodeType": "Stmt_Expression",
          },
          {
            "attributes": {},
            "byRef": false,
            "expr": {
              "attributes": {},
              "name": "controllers",
              "nodeType": "Expr_Variable",
            },
            "keyVar": null,
            "nodeType": "Stmt_Foreach",
            "stmts": [
              {
                "attributes": {},
                "cond": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "name": "controller",
                          "nodeType": "Expr_Variable",
                        },
                      },
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "nodeType": "Scalar_String",
                          "value": "register_routes",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "nodeType": "Name",
                      "parts": [
                        "method_exists",
                      ],
                    },
                    "nodeType": "Expr_FuncCall",
                  },
                  "nodeType": "Expr_BooleanNot",
                },
                "else": null,
                "elseifs": [],
                "nodeType": "Stmt_If",
                "stmts": [
                  {
                    "attributes": {},
                    "nodeType": "Stmt_Continue",
                    "num": null,
                  },
                ],
              },
              {
                "attributes": {},
                "expr": {
                  "args": [],
                  "attributes": {},
                  "name": {
                    "attributes": {},
                    "name": "register_routes",
                    "nodeType": "Identifier",
                  },
                  "nodeType": "Expr_MethodCall",
                  "var": {
                    "attributes": {},
                    "name": "controller",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
            ],
            "valueVar": {
              "attributes": {},
              "name": "controller",
              "nodeType": "Expr_Variable",
            },
          },
        ],
      },
      {
        "attrGroups": [],
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/** Attach wpk hooks required for REST registration. */",
            },
          ],
        },
        "byRef": false,
        "name": {
          "attributes": {},
          "name": "bootstrap_kernel",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Function",
        "params": [],
        "returnType": {
          "attributes": {},
          "name": "void",
          "nodeType": "Identifier",
        },
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "args": [
                {
                  "attributes": {},
                  "byRef": false,
                  "name": null,
                  "nodeType": "Arg",
                  "unpack": false,
                  "value": {
                    "attributes": {},
                    "nodeType": "Scalar_String",
                    "value": "rest_api_init",
                  },
                },
                {
                  "attributes": {},
                  "byRef": false,
                  "name": null,
                  "nodeType": "Arg",
                  "unpack": false,
                  "value": {
                    "attributes": {},
                    "left": {
                      "attributes": {},
                      "name": {
                        "attributes": {},
                        "nodeType": "Name",
                        "parts": [
                          "__NAMESPACE__",
                        ],
                      },
                      "nodeType": "Expr_ConstFetch",
                    },
                    "nodeType": "Expr_BinaryOp_Concat",
                    "right": {
                      "attributes": {},
                      "nodeType": "Scalar_String",
                      "value": "\\register_wpkernel_routes",
                    },
                  },
                },
              ],
              "attributes": {},
              "name": {
                "attributes": {},
                "nodeType": "Name",
                "parts": [
                  "add_action",
                ],
              },
              "nodeType": "Expr_FuncCall",
            },
            "nodeType": "Stmt_Expression",
          },
        ],
      },
      {
        "attributes": {},
        "expr": {
          "args": [],
          "attributes": {},
          "name": {
            "attributes": {},
            "nodeType": "Name",
            "parts": [
              "bootstrap_kernel",
            ],
          },
          "nodeType": "Expr_FuncCall",
        },
        "nodeType": "Stmt_Expression",
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:END AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// Custom plugin logic may be added below. This area is left untouched by the generator.",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
    ],
  },
]
`;

exports[`buildPluginLoaderProgram handles projects without resources: plugin-loader-program-empty 1`] = `
[
  {
    "attributes": {
      "comments": [
        {
          "nodeType": "Comment_Doc",
          "text": "/**
 * Plugin Name: Jobs Plugin
 * Description: Bootstrap loader for the Jobs Plugin WPKernel integration.
 * Version: 0.1.0
 * Requires at least: 6.7
 * Requires PHP: 8.1
 * Text Domain: jobs-plugin
 * Author: WPKernel Contributors
 * Author URI: https://github.com/wpkernel/wpkernel
 * License: GPL-2.0-or-later
 * License URI: https://www.gnu.org/licenses/gpl-2.0.html
 * Generated by WPKernel CLI - edits between WPK:BEGIN AUTO and WPK:END AUTO are managed by the generator.
 * Source: wpk.config.ts → plugin/loader
 * @package JobsPlugin
 */",
        },
      ],
    },
    "nodeType": "Stmt_Nop",
  },
  {
    "attributes": {},
    "declares": [
      {
        "attributes": {},
        "key": {
          "attributes": {},
          "name": "strict_types",
          "nodeType": "Identifier",
        },
        "nodeType": "DeclareItem",
        "value": {
          "attributes": {},
          "nodeType": "Scalar_Int",
          "value": 1,
        },
      },
    ],
    "nodeType": "Stmt_Declare",
    "stmts": null,
  },
  {
    "attributes": {},
    "name": {
      "attributes": {},
      "nodeType": "Name",
      "parts": [
        "JobsPlugin",
      ],
    },
    "nodeType": "Stmt_Namespace",
    "stmts": [
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/**
 * AUTO-GENERATED by WPKernel CLI.
 * Edits between WPK:BEGIN AUTO and WPK:END AUTO will be overwritten.
 * Source: wpk.config.ts → plugin/loader
 */",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:BEGIN AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attributes": {},
        "cond": {
          "attributes": {},
          "expr": {
            "args": [
              {
                "attributes": {},
                "byRef": false,
                "name": null,
                "nodeType": "Arg",
                "unpack": false,
                "value": {
                  "attributes": {},
                  "nodeType": "Scalar_String",
                  "value": "ABSPATH",
                },
              },
            ],
            "attributes": {},
            "name": {
              "attributes": {},
              "nodeType": "Name",
              "parts": [
                "defined",
              ],
            },
            "nodeType": "Expr_FuncCall",
          },
          "nodeType": "Expr_BooleanNot",
        },
        "else": null,
        "elseifs": [],
        "nodeType": "Stmt_If",
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "args": [],
              "attributes": {},
              "name": {
                "attributes": {},
                "nodeType": "Name",
                "parts": [
                  "exit",
                ],
              },
              "nodeType": "Expr_FuncCall",
            },
            "nodeType": "Stmt_Expression",
          },
        ],
      },
      {
        "attrGroups": [],
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/**
 * Retrieve WPKernel REST controllers generated for this plugin.
 * @return array<int, object>
 */",
            },
          ],
        },
        "byRef": false,
        "name": {
          "attributes": {},
          "name": "get_wpkernel_controllers",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Function",
        "params": [],
        "returnType": {
          "attributes": {},
          "name": "array",
          "nodeType": "Identifier",
        },
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "attributes": {},
              "items": [],
              "nodeType": "Expr_Array",
            },
            "nodeType": "Stmt_Return",
          },
        ],
      },
      {
        "attrGroups": [],
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/** Register WPKernel REST controllers with WordPress. */",
            },
          ],
        },
        "byRef": false,
        "name": {
          "attributes": {},
          "name": "register_wpkernel_routes",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Function",
        "params": [],
        "returnType": {
          "attributes": {},
          "name": "void",
          "nodeType": "Identifier",
        },
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "attributes": {},
              "expr": {
                "args": [],
                "attributes": {},
                "name": {
                  "attributes": {},
                  "nodeType": "Name",
                  "parts": [
                    "get_wpkernel_controllers",
                  ],
                },
                "nodeType": "Expr_FuncCall",
              },
              "nodeType": "Expr_Assign",
              "var": {
                "attributes": {},
                "name": "controllers",
                "nodeType": "Expr_Variable",
              },
            },
            "nodeType": "Stmt_Expression",
          },
          {
            "attributes": {},
            "byRef": false,
            "expr": {
              "attributes": {},
              "name": "controllers",
              "nodeType": "Expr_Variable",
            },
            "keyVar": null,
            "nodeType": "Stmt_Foreach",
            "stmts": [
              {
                "attributes": {},
                "cond": {
                  "attributes": {},
                  "expr": {
                    "args": [
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "name": "controller",
                          "nodeType": "Expr_Variable",
                        },
                      },
                      {
                        "attributes": {},
                        "byRef": false,
                        "name": null,
                        "nodeType": "Arg",
                        "unpack": false,
                        "value": {
                          "attributes": {},
                          "nodeType": "Scalar_String",
                          "value": "register_routes",
                        },
                      },
                    ],
                    "attributes": {},
                    "name": {
                      "attributes": {},
                      "nodeType": "Name",
                      "parts": [
                        "method_exists",
                      ],
                    },
                    "nodeType": "Expr_FuncCall",
                  },
                  "nodeType": "Expr_BooleanNot",
                },
                "else": null,
                "elseifs": [],
                "nodeType": "Stmt_If",
                "stmts": [
                  {
                    "attributes": {},
                    "nodeType": "Stmt_Continue",
                    "num": null,
                  },
                ],
              },
              {
                "attributes": {},
                "expr": {
                  "args": [],
                  "attributes": {},
                  "name": {
                    "attributes": {},
                    "name": "register_routes",
                    "nodeType": "Identifier",
                  },
                  "nodeType": "Expr_MethodCall",
                  "var": {
                    "attributes": {},
                    "name": "controller",
                    "nodeType": "Expr_Variable",
                  },
                },
                "nodeType": "Stmt_Expression",
              },
            ],
            "valueVar": {
              "attributes": {},
              "name": "controller",
              "nodeType": "Expr_Variable",
            },
          },
        ],
      },
      {
        "attrGroups": [],
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment_Doc",
              "text": "/** Attach wpk hooks required for REST registration. */",
            },
          ],
        },
        "byRef": false,
        "name": {
          "attributes": {},
          "name": "bootstrap_kernel",
          "nodeType": "Identifier",
        },
        "namespacedName": null,
        "nodeType": "Stmt_Function",
        "params": [],
        "returnType": {
          "attributes": {},
          "name": "void",
          "nodeType": "Identifier",
        },
        "stmts": [
          {
            "attributes": {},
            "expr": {
              "args": [
                {
                  "attributes": {},
                  "byRef": false,
                  "name": null,
                  "nodeType": "Arg",
                  "unpack": false,
                  "value": {
                    "attributes": {},
                    "nodeType": "Scalar_String",
                    "value": "rest_api_init",
                  },
                },
                {
                  "attributes": {},
                  "byRef": false,
                  "name": null,
                  "nodeType": "Arg",
                  "unpack": false,
                  "value": {
                    "attributes": {},
                    "left": {
                      "attributes": {},
                      "name": {
                        "attributes": {},
                        "nodeType": "Name",
                        "parts": [
                          "__NAMESPACE__",
                        ],
                      },
                      "nodeType": "Expr_ConstFetch",
                    },
                    "nodeType": "Expr_BinaryOp_Concat",
                    "right": {
                      "attributes": {},
                      "nodeType": "Scalar_String",
                      "value": "\\register_wpkernel_routes",
                    },
                  },
                },
              ],
              "attributes": {},
              "name": {
                "attributes": {},
                "nodeType": "Name",
                "parts": [
                  "add_action",
                ],
              },
              "nodeType": "Expr_FuncCall",
            },
            "nodeType": "Stmt_Expression",
          },
        ],
      },
      {
        "attributes": {},
        "expr": {
          "args": [],
          "attributes": {},
          "name": {
            "attributes": {},
            "nodeType": "Name",
            "parts": [
              "bootstrap_kernel",
            ],
          },
          "nodeType": "Expr_FuncCall",
        },
        "nodeType": "Stmt_Expression",
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// WPK:END AUTO",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
      {
        "attributes": {
          "comments": [
            {
              "nodeType": "Comment",
              "text": "// Custom plugin logic may be added below. This area is left untouched by the generator.",
            },
          ],
        },
        "nodeType": "Stmt_Nop",
      },
    ],
  },
]
`;
